--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -1,5 +1,5 @@
 pack.name=Custom Bows
-pack.description=
+pack.description=A commission pack for treysundown! Made by Alien Edds
 
 item.weapon:template_bow=Template Bow
 item.weapon:wooden_bow=Wooden Bow
